# cyberbox

./: .coveragerc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  LICENSE  README.rst  docker-compose.yml  export-vars-example.sh  pyproject.toml  setup.cfg
.ci/: Dockerfile  make_dump.sh  sort_dump.py  upgrade_and_downgrade_db.py  upgrade_db.py
configs/: config-dev-example.yaml  config-dev.yaml  config-docker-example.yaml
cyberbox/: __main__.py  app.py  config.py  const.py  dependency.py  env.py  models.py  orm.py  pagination.py  templates.py  utils.py
cyberbox/dev/: demonstrate-capabilities.py  pre_create_data.py
cyberbox/migrations/: README  alembic.example.ini  alembic.ini  env.py
cyberbox/migrations/versions/: 2020_04_08_8fc641b96382_initial.py  2020_04_11_52e8172ed2f9_initial.py
cyberbox/routes/: admin.py  auth.py  common.py  files.py  links.py  root.py  test.py
cyberbox/templates/: root.html
tests/: conftest.py  test_admin_routes.py  test_cli.py  test_config.py  test_cyberbox.py  test_data.py  test_dev_pre_create_data.py  test_file_pagination.py  test_file_routes.py  test_file_upload.py  test_link_pagination.py  test_link_routes.py  test_login.py  test_profile_info.py  test_register.py  test_root.py  test_user_created.py  test_users_created.py
tests/fixtures/: auth.py  data.py  files.py
tests/load_testing/: script.py
