[tool.poetry]
name = "cyberbox"
version = "0.1.0"
description = ""
authors = ["artslob <artslob@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.1"
sqlalchemy = "^1.3.13"
sqlalchemy_utils = "^0.36.1"
psycopg2-binary = "^2.8.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
