[tool.black]
line-length = 100
target-version = ['py37']

[tool.isort]
line_length = 100
combine_as_imports = true
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

[tool.poetry]
name = "cyberbox"
version = "0.1.0"
description = ""
authors = ["artslob <artslob@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.1"
sqlalchemy = "^1.3.13"
sqlalchemy_utils = "^0.36.1"
psycopg2-binary = "^2.8.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
isort = {extras = ["pyproject"], version = "^4.3.21"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
