[tool.black]
line-length = 100
target-version = ['py37']

[tool.isort]
line_length = 100
combine_as_imports = true
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
# "default_section" and "known_first_party":
# hack for isort to be working in isolation (without all packages installed)
default_section = "THIRDPARTY"
known_first_party = "cyberbox"

[tool.poetry]
name = "cyberbox"
version = "0.1.0"
description = ""
authors = ["artslob <artslob@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = {extras = ["all"], version = "^0.49.0"}
pyjwt = "^1.7.1"
passlib = {extras = ["bcrypt"], version = "^1.7.2"}
databases = {extras = ["postgresql"], version = "^0.2.6"}
pyyaml = "^5.3"
aiofiles = "^0.4.0"
sqlalchemy_utils = "^0.36.1"
arrow = "^0.15.5"
alembic = "^1.4.2"
click = "^7.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
isort = {extras = ["pyproject"], version = "^4.3.21"}
restview = "^2.9.2"
flake8 = "^3.7.9"
pytest-asyncio = "^0.10.0"
httpx = "^0.11.1"
asgi-lifespan = "^1.0.0"
coverage = "^5.1"
setuptools_scm = "^3.5.0"
locust = "^1.3.1"

[tool.poetry.scripts]
cyberbox = 'cyberbox.__main__:cyberbox'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
